Fix tooltip z-index && Add 0x prefix to accounts that do not have it

--- a/apps/frontend/src/style.css
+++ b/apps/frontend/src/style.css
@@ -67,3 +67,7 @@ h1 {
   flex: 1;
   flex-grow: 1 !important;
 }
+
+.recharts-tooltip-wrapper {
+  z-index: 1000;
+}
